More css tweaks and fixing some text wrapping around icons

--- a/src/components/Hand/hand.css
+++ b/src/components/Hand/hand.css
@@ -26,7 +26,7 @@ h2 {
 		align-items: center;
 		padding: 0.5rem 0.75rem;
 		border-radius: 4px 4px 0 0;
-		line-height: 1.25rem;
+		line-height: 1.15rem;
 		background-image:
 			radial-gradient(circle at center, #00000018 0.15rem, transparent 0),
 			radial-gradient(circle at center, #00000018 0.15rem, transparent 0);
@@ -56,7 +56,7 @@ h2 {
 			font-size: 1.15rem;
 			color: white;
 			font-weight: 900;
-			-webkit-text-stroke: 1px black;
+			-webkit-text-stroke: 0.8px black;
 		}
 	}
 
